--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "koa-qs": "^2.0.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
+    "mkdirp": "^0.5.1",
     "next": "^9.0.5",
     "next-github-auth": "^0.2.4",
+    "parse-link-header": "^1.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
