--- a/package.json
+++ b/package.json
@@ -4,32 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": ". ./.env && node server.js",
+    "dev": ". ./.env && node server",
     "build": "next build",
-    "start": ". ./.env && NODE_ENV=production node server.js"
+    "start": ". ./.env && NODE_ENV=production node server",
+    "db:drop": "dropdb -U postgres -h localhost credao",
+    "db:create": "createdb -U postgres -h localhost credao",
+    "db:setup": "psql -U postgres -h localhost -d credao -f db.sql",
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:setup"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aragon/os": "^4.3.0",
+    "@graphile-contrib/pg-many-to-many": "^1.0.0-beta.10",
+    "base64url": "^3.0.1",
     "bignumber.js": "^9.0.0",
-    "bull": "^3.10.0",
+    "connect-pg-simple": "^6.0.1",
     "csvtojson": "^2.0.10",
     "ethereumjs-util": "^6.1.0",
     "ethers": "^4.0.37",
+    "express-session": "^1.16.2",
     "fs-extra": "^8.1.0",
-    "hash.js": "^1.1.7",
+    "graphile-worker": "0.1.0-alpha.0",
     "ipfs-http-client": "^36.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.2.1",
     "merkle-tree-solidity": "^1.0.8",
     "mkdirp": "^0.5.1",
     "next": "^9.0.5",
-    "next-github-auth": "^0.2.4",
-    "nookies": "^2.0.8",
     "parse-link-header": "^1.0.1",
+    "pg-boss": "^3.1.7",
+    "postgraphile": "^4.4.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
