--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@aragon/os": "^4.3.0",
     "@graphile-contrib/pg-many-to-many": "^1.0.0-beta.10",
+    "aragon": "ssh://git@github.com:cslarson/aragon.git",
     "base64url": "^3.0.1",
     "bignumber.js": "^9.0.0",
     "connect-pg-simple": "^6.0.1",
