--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": ". ./.env && node server",
     "build": "next build",
     "start": ". ./.env && NODE_ENV=production node server",
-    "db:drop": "dropdb -U postgres -h localhost credao",
-    "db:create": "createdb -U postgres -h localhost credao",
-    "db:setup": "npm run db:create && psql -U postgres -h localhost -d credao -f db.sql",
-    "db:reset": "npm run db:drop && npm run db:setup"
+    "reset": ". ./.env && npm run db:reset && npm run dev",
+    "db:drop": ". ./.env && dropdb -h localhost credao",
+    "db:create": ". ./.env && createdb -h localhost credao",
+    "db:setup": ". ./.env && npm run db:create && psql -h localhost -d credao -f db.sql",
+    "db:reset": ". ./.env && npm run db:drop && npm run db:setup",
+    "psql": ". ./.env && psql -h localhost -d credao"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +25,7 @@
     "bignumber.js": "^9.0.0",
     "connect-pg-simple": "^6.0.1",
     "csvtojson": "^2.0.10",
+    "ethereum-checksum-address": "^0.0.3",
     "ethereumjs-util": "^6.1.0",
     "ethers": "^4.0.37",
     "express-session": "^1.16.2",
@@ -36,6 +39,7 @@
     "parse-link-header": "^1.0.1",
     "pg-boss": "^3.1.7",
     "postgraphile": "^4.4.3",
+    "postgraphile-plugin-derived-field": "^1.0.0-alpha.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
