added ProtectAutoKeyPlugin to convert private key -> address and keep key private unless owning user or admin

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ethers": "^4.0.37",
     "express-session": "^1.16.2",
     "fs-extra": "^8.1.0",
+    "graphile-utils": "^4.4.5",
     "ipfs-http-client": "^36.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
