--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": ". ./.env && node server",
     "build": "next build",
-    "build:aragon": "git submodule update --init && cd aragon && yarn && npm run build",
+    "build:aragon": "git submodule update --init && cd aragon && yarn && npm run build:local",
     "start": ". ./.env && NODE_ENV=production node server",
     "reset": ". ./.env && npm run db:reset && npm run dev",
     "db:drop": ". ./.env && dropdb -h localhost credao",
