use grommet to add some styling

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "ISC",
   "dependencies": {
     "@aragon/os": "^4.3.0",
+    "@aragon/ui": "^0.40.2",
     "@graphile-contrib/pg-many-to-many": "^1.0.0-beta.10",
+    "babel-plugin-styled-components": "^1.10.6",
     "base64url": "^3.0.1",
     "bignumber.js": "^9.0.0",
     "connect-pg-simple": "^6.0.1",
@@ -31,12 +33,16 @@
     "express-session": "^1.16.2",
     "fs-extra": "^8.1.0",
     "graphile-utils": "^4.4.5",
+    "grommet": "^2.7.8",
+    "grommet-controls": "^2.0.0-alpha1",
+    "grommet-icons": "^4.3.0",
     "ipfs-http-client": "^36.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "merkle-tree-solidity": "^1.0.8",
     "mkdirp": "^0.5.1",
     "next": "^9.0.5",
+    "next-transpile-modules": "^2.3.1",
     "parse-link-header": "^1.0.1",
     "pg-boss": "^3.1.7",
     "pg-pubsub": "^0.5.0",
@@ -46,7 +52,7 @@
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
     "sourcecred": "^0.4.0",
-    "styled-components": "^5.0.0-beta.8",
+    "styled-components": "^4.4.0",
     "web3": "^1.2.1"
   },
   "devDependencies": {
