add /cred endpoint, create dao and redirect to dao on setup

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "base64url": "^3.0.1",
     "bignumber.js": "^9.0.0",
     "connect-pg-simple": "^6.0.1",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "ethereum-checksum-address": "^0.0.3",
     "ethereumjs-util": "^6.1.0",
     "ethers": "^4.0.37",
+    "express-boom": "^3.0.0",
     "express-session": "^1.16.2",
     "fs-extra": "^8.1.0",
     "graphile-utils": "^4.4.5",
