--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "connect-pg-simple": "^6.0.1",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
+    "eth-ens-namehash": "^2.0.8",
     "ethereum-checksum-address": "^0.0.3",
     "ethereumjs-util": "^6.1.0",
     "ethers": "^4.0.37",
